--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ litestar-asyncpg = "^0"
 advanced-alchemy = "^0.20"
 msgspec = "^0.18.6"
 alembic = "^1.13.1"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pytest = "^8.3.5"
+pytest-asyncio = "^0.26.0"
 
 
 [build-system]
